# SLAE

./: .gitignore  CMakeLists.txt  main.cpp
classes/: matrixes.cpp  matrixes.h
sam_work/: CMakeLists.txt
sam_work/1/: 1.cpp  data3  data4_gauss_seidel  data4_jacobi  data4_simple_iterative  task3.py
sam_work/2/: 1.cpp  2.cpp  data1-1.txt  data1-2.txt  data1-3.txt  data1-4.txt  data1-5.txt  data2-1.txt  data2-2.txt  data2-3.txt  data2-4.txt  data2-5.txt  task1-5.py  task1.py  task2.py
source/: CMakeLists.txt  algorithms.cpp  algorithms.h  decompositions.cpp  decompositions.h  iterative_methods.cpp  iterative_methods.h  main.cpp  matrixes.cpp  matrixes.h  solvers.cpp  solvers.h  vector_operations.cpp  vector_operations.h
tests/: CMakeLists.txt  csr_test.cpp  dense_test.cpp  householder_test.cpp  iterative_methods_test.cpp  tridiagonal_test.cpp  vector_operations_test.cpp
